--- a/_posts/2022-11-21-welcome.md
+++ b/_posts/2022-11-21-welcome.md
@@ -5,11 +5,11 @@ category: General
 tags: info profile
 ---
 
-Hi there, my name is Martin Swinkels and I am a cloud developer, app developer, and DevOps consultant, experienced on Azure, Microsoft 365, and Power Platform. 
+Hi there, my name is Martin Swinkels and I am a cloud developer, app developer, and DevOps consultant, with experience on Azure, Microsoft 365, and Power Platform.
 
 > **Note**: As of February 2023 I will start as a remote (hybrid) freelancer, based in Portugal, offering my services throughout Europe.
 
-You can reach out to me using the social buttons below, explore my [blog]({{ site.baseurl }}/) or read more [about]({{ site.baseurl }}/about) me. If you’ve got a question about a post, just leave a comment.
+You can reach out to me using the social buttons below, feel free to explore my [blog]({{ site.baseurl }}/) or read more [about me]({{ site.baseurl }}/about). If you’ve got a question about a post, just leave a comment.
 
 Thanks for contacting me!  
 Martin
