Rename What I do post

--- a/_posts/2023-02-01-what-i-do.md
+++ b/_posts/2023-02-01-what-i-do.md
@@ -1,10 +1,10 @@
 ---
 layout: post
-title: Welcome to my portfolio
+title: What I do
 author: Martin Swinkels
 category: [Portfolio, Miscellaneous]
 tags: azure azure-devops bicep powershell yaml
-date: 2024-09-01
+# date: 2024-09-01
 comments: false
 ---
 
