--- a/_posts/2023-02-01-what-i-do.md
+++ b/_posts/2023-02-01-what-i-do.md
@@ -47,7 +47,7 @@ I am an Azure DevOps Engineer with a passion for helping businesses leverage the
 
 ### Why work with me?
 
-I’m not just a DevOps Engineer; I am a strategic partner dedicated to your business success. I bring a results-oriented approach, a deep understanding of the Azure ecosystem, and a commitment to delivering value through technology.
+I’m not just a DevOps Engineer; I am a reliable partner dedicated to your business success. I bring a results-oriented approach, a deep understanding of the Azure ecosystem, and a commitment to delivering value through technology.
 
 Let’s connect and explore how I can help your organization harness the full power of Azure. Reach out for a consultation and let’s transform your cloud infrastructure for the digital age!
 
