Update some content

--- a/_posts/2023-02-01-what-i-do.md
+++ b/_posts/2023-02-01-what-i-do.md
@@ -8,7 +8,7 @@ tags: azure azure-devops bicep powershell yaml
 comments: false
 ---
 
-Whether you need an extra helping hand to meet tight deadlines or are looking to hire a dedicated professional for the long term, I am here to support your goals. My expertise ensures seamless integration, continuous improvement, and reliable performance, making your business more agile and competitive.
+Whether you need an extra hand to meet tight deadlines or are looking to hire a dedicated professional for a scoped project or for the long term, I am here to support your goals. My expertise ensures seamless integration, continuous improvement, and reliable performance, making your business more agile and competitive.
 
 I am an Azure DevOps Engineer with a passion for helping businesses leverage the full potential of Azure’s cloud capabilities. With a proven track record of successful implementations and a commitment to staying at the cutting edge of technology, I am here to elevate your cloud experience.
 
