Updated post content

--- a/_posts/2023-02-01-what-i-do.md
+++ b/_posts/2023-02-01-what-i-do.md
@@ -15,7 +15,7 @@ I am an Azure DevOps Engineer with a passion for helping businesses leverage the
 ### What I do
 
 - **Azure DevOps**  
-  Building self-service project creation with best practices, policies and all resources in place, implementing CI/CD pipelines, managing repositories, branch and release strategies, and facilitating seamless collaboration using Azure DevOps.
+  Building self-service project creation with best practices, policies, guidelines, governance and all resources in place, implementing CI/CD pipelines, managing repositories, branch and release strategies, and facilitating seamless collaboration using Azure DevOps Boards.
 
 - **Azure Platform**  
   I bring in-depth knowledge of Azure Platform Landing Zone automation to streamline and optimize your cloud environment.
