Unpublished some older posts that aren't relevant anymore

--- a/_posts/2023-02-01-what-i-do.md
+++ b/_posts/2023-02-01-what-i-do.md
@@ -4,8 +4,8 @@ title: What I do
 author: Martin Swinkels
 category: [Portfolio, Miscellaneous]
 tags: azure azure-devops bicep powershell yaml
-# date: 2024-09-01
 comments: false
+published: false
 ---
 
 Whether you need an extra hand to meet tight deadlines or are looking to hire a dedicated professional for a scoped project or for the long term, I am here to support your goals. My expertise ensures seamless integration, continuous improvement, and reliable performance, making your business more agile and competitive.
